# patchwork

./: .gitignore  README.md  pyproject.toml
benchmark/: README.md
benchmark/bugs/BUG_001/: ground_truth.json  issue.md  metadata.json  (+1 more)
patchbench/: __init__.py  cli.py
patchbench/agents/: __init__.py  fixer.py  judge.py  locator.py  orchestrator.py  prompts.py  validator.py
patchbench/baselines/: __init__.py  chain.py  single_agent.py
patchbench/metrics/: __init__.py  scoring.py
patchbench/runner/: __init__.py  approval.py  driver.py  loader.py  watcher.py
patchbench/schemas/: __init__.py  baseline.py  bug.py  enums.py  fixer.py  judge.py  locator.py  trace.py  validator.py
patchbench/tools/: __init__.py  cheat_detector.py  file_read.py  linter.py  patch_apply.py  repo_search.py  sandbox.py  static_analysis.py  test_runner.py  verifier.py
results/: chain.json  multi_agent.json  single_agent.json
results/traces/: run_0861a04d.json  run_0ebba62d.json  run_21fa14ef.json  run_263038d8.json  run_28d6492b.json  run_2aff31a3.json  run_35d46805.json  run_3ad6ea51.json  run_55c1a280.json  run_6c9b696e.json  run_86f16c20.json  run_97521d21.json  run_a212af0a.json  run_aaecc24a.json  run_c6f82e33.json  run_e284af48.json  run_e362300f.json  run_e3b959c2.json  run_e3fd8d52.json  run_fc2e81c6.json
tests/: test_agents.py  test_approval.py  test_metrics.py  test_runner.py  test_tools.py  test_verifier.py  test_watcher.py
tests/schemas/: test_baseline.py  test_bug.py  test_enums.py  test_fixer.py  test_judge.py  test_locator.py  test_trace.py  test_validator.py
(+124 files in other folders)
