[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchbench"
version = "0.1.0"
description = "A multi-agent software repair benchmark and bug-fixing system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["patchbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# All tests are plain functions; this stops pytest from trying to collect
# schema models whose names start with "Test" (e.g. TestResults).
python_classes = []
